syntax = "proto3";

package rrb.infra.devicemodel;

option java_package = "rrb.infra.devicemodel";
option java_outer_classname = "DeviceModelProto";

message DeviceNode {
    string name = 1;
    string value = 2;
    repeated DeviceNode children = 3;
    map<string, string> attributes = 4;
}

message MessageBlock {
    enum MessageTypeType {
        REGISTER = 0;
        HEARTBEAT = 1;
        IPROC = 2;
        REPLY = 3;
        STREAM = 4;
    }

    enum MethodTypeType {
        GET = 0;
        PUT = 1;
        POST = 2;
    }

    string messageId = 1;
    MessageTypeType messageType = 2;
    MethodTypeType methodType = 3;
    string toServiceName = 4;
    string fromServiceName = 5;
    string path = 6;
    DeviceNode body = 7;
}
